[package]
name = "fractic-iap"
version = "0.1.0"
edition = "2021"
authors = ["Mart van Buren <mart@fractic.io>"]

[dependencies]
async-trait = "0.1.83"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
fractic-aws-secrets = { git = "https://github.com/fractic-io/rust-aws-secrets.git" }
fractic-generic-server-error = { git = "https://github.com/fractic-io/rust-generic-server-error.git" }
jose-jws = "0.1.2"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
rust_iso3166 = "0.1.13"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
yup-oauth2 = "11.0.0"
