[package]
name = "fractic-iap"
version = "0.1.0"
edition = "2021"
authors = ["Mart van Buren <mart@fractic.io>"]

[dependencies]
async-trait = "^0.1.83"
base64 = "^0.22.1"
chrono = { version = "^0.4.38", features = ["serde"] }
fractic-env-config = { git = "https://github.com/fractic-io/rust-env-config.git" }
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
jsonwebtoken = "^9.3.0"
jwtk = "^0.3.0"
once_cell = "^1.20.2"
openssl = "^0.10.68"
reqwest = { version = "^0.12.8", default-features = false, features = ["rustls-tls", "json"] }
rust_iso3166 = "^0.1.13"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "^1.0.117"
serde_repr = "^0.1.19"
serde_with = { version = "^3.11.0", features = ["chrono"] }
yup-oauth2 = "^11.0.0"
